feat: added bugfeedback

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "@sentry/nextjs": "^8.9.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "opentelemetry-instrumentation-fetch-node": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
