--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "opentelemetry-instrumentation-fetch-node": "^1.2.0",
     "react": "^18",
